--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,7 @@
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
-                <version>9.4.1211.jre7</version>
+                <version>42.1.4</version>
             </dependency>
             <dependency>
                 <groupId>org.liquibase</groupId>
