--- a/sonar-collector-webhook/pom.xml
+++ b/sonar-collector-webhook/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>org.osgi.service.jdbc</artifactId>
         </dependency>
         <dependency>
+            <groupId>no.priv.bang.osgi.service.adapters</groupId>
+            <artifactId>jdbc</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.ops4j.pax.web</groupId>
             <artifactId>pax-web-api</artifactId>
         </dependency>
