Add missing field "complexity".

--- a/sonar-collector-webhook/src/main/resources/application.properties
+++ b/sonar-collector-webhook/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-sonar.measures.components.metricKeys=lines,bugs,new_bugs,vulnerabilities,new_vulnerabilities,code_smells,new_code_smells,coverage,new_coverage
+sonar.measures.components.metricKeys=lines,bugs,new_bugs,vulnerabilities,new_vulnerabilities,code_smells,new_code_smells,coverage,new_coverage,complexity
 sonar.collector.jdbc.url=jdbc:postgresql:///sonarcollector
-
