--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <liquibase.version>3.5.3</liquibase.version>
         <liquibase-slf4j.version>2.0.0</liquibase-slf4j.version>
         <jackson.version>2.8.7</jackson.version>
-        <osgi-service-adaptors.version>1.0.1-SNAPSHOT</osgi-service-adaptors.version>
+        <osgi-service-adaptors.version>1.0.1</osgi-service-adaptors.version>
     </properties>
 
     <modules>
