The maven-release-plugin didn't like "LATEST" as a dependency version number.

--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,13 @@
                 <version>${liquibase.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>no.priv.bang.karaf</groupId>
+                <artifactId>liquibase-core-karaf</artifactId>
+                <version>${liquibase.version}</version>
+                <type>xml</type>
+                <classifier>features</classifier>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
