--- a/sonar-collector-webhook/pom.xml
+++ b/sonar-collector-webhook/pom.xml
@@ -11,13 +11,13 @@
 <!-- See the License for the specific language governing permissions and limitations -->
 <!-- under the License.                                                              -->
 
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xml:space="preserve">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xml:space="preserve">
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>no.priv.bang.sonar.sonar-collector</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <artifactId>sonar-collector-webhook</artifactId>
 
