--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>no.priv.bang.sonar.sonar-collector</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -407,7 +407,7 @@
     <scm>
         <url>https://github.com/steinarb/sonar-collector</url>
         <connection>scm:git:https://github.com/steinarb/sonar-collector.git</connection>
-        <tag>parent-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
