Generate jackson runtime dependencies instead of using jackson karaf feature

--- a/sonar-collector-webhook/pom.xml
+++ b/sonar-collector-webhook/pom.xml
@@ -81,12 +81,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.ops4j.pax.jdbc</groupId>
@@ -126,6 +126,9 @@
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
                 <artifactId>karaf-maven-plugin</artifactId>
+                <configuration>
+                    <includeTransitiveDependency>true</includeTransitiveDependency>
+                </configuration>
             </plugin>
         </plugins>
     </build>
