--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <liquibase.version>3.5.3</liquibase.version>
         <liquibase-slf4j.version>2.0.0</liquibase-slf4j.version>
         <jackson.version>2.9.9</jackson.version>
+        <jackson.databind.version>2.9.9</jackson.databind.version>
         <osgi-service-adaptors.version>1.0.1</osgi-service-adaptors.version>
     </properties>
 
@@ -171,7 +172,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
+                <version>${jackson.databind.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
