Bind the docker build to the maven package phase

--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -34,6 +34,15 @@
                     <baseImage>apache/karaf:4.2.8</baseImage>
                     <dockerDirectory>docker</dockerDirectory>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>build-image</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
