--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ addons:
         organization: steinarb-github
         token: $SONAR_TOKEN
 script:
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
-    - mvn cobertura:cobertura coveralls:report
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar coveralls:report
