--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- Copyright 2020 Steinar Bang                                                     -->
+<!-- Copyright 2020-2021 Steinar Bang                                                -->
 <!--                                                                                 -->
 <!-- Licensed under the Apache License, Version 2.0 (the "License");                 -->
 <!-- you may not use this file except in compliance with the License.                -->
@@ -17,7 +17,7 @@
     <parent>
         <groupId>no.priv.bang.sonar.sonar-collector</groupId>
         <artifactId>sonar-collector</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.4.0-SNAPSHOT</version>
     </parent>
     <artifactId>docker</artifactId>
 
