--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.bundle.plugin.version>5.1.1</maven.bundle.plugin.version>
         <karaf.version>4.3.0</karaf.version>
-        <osgi.version>6.0.0</osgi.version>
+        <osgi.version>7.0.0</osgi.version>
         <osgi.service>1.3.0</osgi.service>
         <pax.jdbc.version>1.0.1</pax.jdbc.version>
         <liquibase.version>3.8.0</liquibase.version>
@@ -81,7 +81,7 @@
             </dependency>
             <dependency>
                 <groupId>org.osgi</groupId>
-                <artifactId>org.osgi.core</artifactId>
+                <artifactId>osgi.core</artifactId>
                 <version>${osgi.version}</version>
                 <scope>provided</scope>
             </dependency>
