--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <show>private</show>
+                    <source>8</source>
                 </configuration>
                 <executions>
                     <execution>
