--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>no.priv.bang.pom</groupId>
-        <artifactId>bang-pom</artifactId>
-        <version>1.0.9</version>
+        <artifactId>bang-app-pom</artifactId>
+        <version>1.0.13</version>
     </parent>
     <groupId>no.priv.bang.sonar.sonar-collector</groupId>
     <artifactId>sonar-collector</artifactId>
@@ -31,7 +31,6 @@
     <properties>
         <jackson.version>2.10.3</jackson.version>
         <jackson.databind.version>${jackson.version}</jackson.databind.version>
-        <osgi-service-adapters.version>1.1.3</osgi-service-adapters.version>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../jacoco-coverage-report/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
@@ -42,6 +41,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>no.priv.bang.pom</groupId>
+                <artifactId>bang-bom</artifactId>
+                <version>${bang-bom.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.apache.karaf</groupId>
                 <artifactId>karaf-bom</artifactId>
@@ -147,6 +153,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <releaseProfiles>release-sign-artifact</releaseProfiles>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
