Add ratings metrics to the callback query to sonar

--- a/sonar-collector-webhook/src/main/resources/application.properties
+++ b/sonar-collector-webhook/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-sonar.measures.components.metricKeys=lines,bugs,new_bugs,vulnerabilities,new_vulnerabilities,code_smells,new_code_smells,coverage,new_coverage,complexity
+sonar.measures.components.metricKeys=lines,bugs,new_bugs,vulnerabilities,new_vulnerabilities,code_smells,new_code_smells,coverage,new_coverage,complexity,sqale_rating,new_maintainability_rating,security_rating,new_security_rating,reliability_rating,new_reliability_rating
 sonar.collector.jdbc.url=jdbc:postgresql:///sonarcollector
