If changes aren't pushed by release:prepare, then release:perform needs to do a local checkout

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
                     <pushChanges>false</pushChanges>
+                    <localCheckout>true</localCheckout>
                     <releaseProfiles>release-sign-artifact</releaseProfiles>
                 </configuration>
             </plugin>
