Insert org.apache.karaf.features.cfg file from karaf 4.4.4

--- a/docker/docker/org.apache.karaf.features.cfg
+++ b/docker/docker/org.apache.karaf.features.cfg
@@ -21,36 +21,34 @@
 # Comma separated list of features repositories to register by default
 #
 featuresRepositories = \
-    mvn:org.apache.karaf.features/framework/4.2.8/xml/features, \
-    mvn:org.apache.karaf.features/spring/4.2.8/xml/features, \
-    mvn:org.apache.karaf.features/enterprise/4.2.8/xml/features, \
-    mvn:org.apache.karaf.features/standard/4.2.8/xml/features, \
-    mvn:no.priv.bang.sonar.sonar-collector/sonar-collector-webhook/LATEST/xml/features
+    mvn:org.apache.karaf.features/framework/4.4.4/xml/features, \
+    mvn:org.apache.karaf.features/standard/4.4.4/xml/features, \
+    mvn:org.apache.karaf.features/spring/4.4.4/xml/features, \
+    mvn:org.apache.karaf.features/enterprise/4.4.4/xml/features, \
+    mvn:org.apache.karaf.features/specs/4.4.4/xml/features
 
 #
 # Comma separated list of features to install at startup
 #
 featuresBoot = \
-    instance/4.2.8, \
-    package/4.2.8, \
-    log/4.2.8, \
-    ssh/4.2.8, \
-    framework/4.2.8, \
-    system/4.2.8, \
-    eventadmin/4.2.8, \
-    feature/4.2.8, \
-    shell/4.2.8, \
-    management/4.2.8, \
-    service/4.2.8, \
-    jaas/4.2.8, \
-    deployer/4.2.8, \
-    diagnostic/4.2.8, \
-    wrap/2.6.2, \
-    bundle/4.2.8, \
-    config/4.2.8, \
-    kar/4.2.8, \
-    ${env:JDBC_DRIVER_FEATURE:-postgresql} \
-    sonar-collector-webhook-with-postgresql
+    instance/4.4.4, \
+    package/4.4.4, \
+    log/4.4.4, \
+    ssh/4.4.4, \
+    framework/4.4.4, \
+    system/4.4.4, \
+    eventadmin/4.4.4, \
+    feature/4.4.4, \
+    shell/4.4.4, \
+    management/4.4.4, \
+    service/4.4.4, \
+    jaas/4.4.4, \
+    deployer/4.4.4, \
+    diagnostic/4.4.4, \
+    wrap/2.6.14, \
+    bundle/4.4.4, \
+    config/4.4.4, \
+    kar/4.4.4
 
 #
 # Resource repositories (OBR) that the features resolver can use
@@ -87,6 +85,11 @@ featuresBootAsynchronous=false
 # Store cfg file for config element in feature
 #
 #configCfgStore=true
+
+#
+# Define if the feature service automatically refresh bundles
+#
+autoRefresh=true
 
 #
 # Configuration of features processing mechanism (overrides, blacklisting, modification of features)
